[project]
name = "computer-use-preview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browserbase==1.4.0",
    "google-genai>=1.40.0",
    "playwright==1.55.0",
    "pydantic==2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "termcolor==3.1.0",
]
